--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,9 @@
         <div class="opacity"></div>
         <div class="menu">
           <ul>
-            <li><a href="#Adopcion">Adopción</a></li>
-            <li><a href="#Categorias">Categorías</a></li>
-            <li><a href="#SobreNosotros">Sobre nosotros</a></li>
+            <li><a href="./404file.html">Adopción</a></li>
+            <li><a href="./404file.html">Categorías</a></li>
+            <li><a href="./404file.html">Sobre nosotros</a></li>
           </ul>
           <!-- <a href="./login.html" class="m-contact">Contáctanos</a> -->
           <div class="icons">
@@ -55,10 +55,10 @@
       </div>
 
       <ul class="desktop">
-        <li><a href="#Adopcion">Adopción</a></li>
-        <li><a href="#Categorias">Categorías</a></li>
-        <li><a href="#SobreNosotros">Sobre nosotros</a></li>
-        <li><a href="#Like"><img src="./assets/icons/corazon_icono.svg" alt="favoritos"></a></li>
+        <li><a href="./404file.html">Adopción</a></li>
+        <li><a href="./404file.html">Categorías</a></li>
+        <li><a href="./404file.html">Sobre nosotros</a></li>
+        <li><a href="./404file.html"><img src="./assets/icons/corazon_icono.svg" alt="favoritos"></a></li>
         <div class="vertical-line"></div>
         <li><a href="./login.html">Iniciar sesión</a></li>
       </ul>
@@ -71,7 +71,7 @@
 
     <h1>Mi raza favorita es: <br>Ad<img src="./assets/icons/icono_logo_blanco.svg" alt="logo letra 'o'">ptado</h1>
     <p>Kompi el buscador de animales más<br> grande de la red de España</p>
-    <a href="" class="button">Comenzar búsqueda</a>
+    <a href="./404file.html" class="button">Comenzar búsqueda</a>
 
   </main>
 
@@ -81,19 +81,19 @@
 
     <div class="icon">
       <div class="shadow">
-        <a href=""> <img src="./assets/icons/icono_perro.svg" alt="perros"></a>
+        <a href="./404file.html"> <img src="./assets/icons/icono_perro.svg" alt="perros"></a>
       </div>
       <div class="shadow">
-        <a href=""><img src="./assets/icons/icono_gato.svg" alt="gatos"></a>
+        <a href="./404file.html"><img src="./assets/icons/icono_gato.svg" alt="gatos"></a>
       </div>
       <div class="shadow">
-        <a href=""> <img src="./assets/icons/icono_pajaro.svg" alt="pajaros"></a>
+        <a href="./404file.html"> <img src="./assets/icons/icono_pajaro.svg" alt="pajaros"></a>
       </div>
       <div class="shadow">
-        <a href=""> <img src="./assets/icons/icono_roedor.svg" alt="roedores"></a>
+        <a href="./404file.html"> <img src="./assets/icons/icono_roedor.svg" alt="roedores"></a>
       </div>
       <div class="shadow">
-        <a href=""><img src="./assets/icons/icono_reptil.svg" alt="reptiles"></a>
+        <a href="./404file.html"><img src="./assets/icons/icono_reptil.svg" alt="reptiles"></a>
       </div>
     </div>
 
@@ -132,7 +132,7 @@
         <p><span>+315 mascotas</span></p>
         <p>disponibles en kompi</p>
         <div class="footer">
-          <a class="button" href="#VerTodas">Ver más</a>
+          <a class="button" href="./404file.html">Ver más</a>
         </div>
       </div>
 
@@ -140,7 +140,7 @@
 
     </div>
 
-    <a class="button more" href="#VerTodas">Ver más</a>
+    <a class="button more" href="./404file.html">Ver más</a>
   </section>
 
 
@@ -196,7 +196,7 @@
       </div>
     </div>
 
-    <a class="button" href="#VerTodas">Leer más</a>
+    <a class="button" href="./404file.html">Leer más</a>
 
   </section>
 
@@ -330,7 +330,7 @@
     <div class="information">
 
       <div class="column two">
-        <a href="#"><img class="logo" src="./assets/icons/version_blanca_logo.svg"></a>
+        <a href="./index.html"><img class="logo" src="./assets/icons/version_blanca_logo.svg"></a>
         <a href="mailto:buscokompi@gmail.com" class="mail">buscokompi@gmail.com</a>
         <div class="social">
           <a href="https://www.facebook.com/adoptaunkompi/"><img src="./assets/icons/icono_facebook.svg"
@@ -343,16 +343,16 @@
 
       <div class="column">
         <p>Información</p>
-        <a href="#">Sobre nosotros</a>
-        <a href="#">Busca una mascota</a>
-        <a href="#">Contáctanos</a>
+        <a href="./404file.html">Sobre nosotros</a>
+        <a href="./404file.html">Busca una mascota</a>
+        <a href="./404file.html">Contáctanos</a>
       </div>
 
       <div class="column three">
         <p>Acerca de...</p>
-        <a href="#">Política de privacidad</a>
-        <a href="#">Términos y condiciones</a>
-        <a href="#">Preguntas frecuentes</a>
+        <a href="./404file.html">Política de privacidad</a>
+        <a href="./404file.html">Términos y condiciones</a>
+        <a href="./404file.html">Preguntas frecuentes</a>
       </div>
     </div>
 
