--- a/src/index.html
+++ b/src/index.html
@@ -216,7 +216,7 @@
 
     <h2>Preguntas frecuentes</h2>
     <div class="container">
-      <div class="question">
+      <div class="question question1" >
         ¿Qué es Kompi?
       </div>
       <div class="answercont">
@@ -232,7 +232,7 @@
     </div>
 
     <div class="container">
-      <div class="question">
+      <div class="question question2">
         ¿Cómo funciona?
       </div>
       <div class="answercont">
@@ -247,7 +247,7 @@
     </div>
 
     <div class="container">
-      <div class="question">
+      <div class="question question3">
         ¿Qué animales puedo encontrar / publicar?
       </div>
       <div class="answercont">
@@ -264,7 +264,7 @@
     </div>
 
     <div class="container">
-      <div class="question">
+      <div class="question question4">
         ¿Es gratis?
       </div>
       <div class="answercont">
@@ -277,7 +277,7 @@
     </div>
 
     <div class="container">
-      <div class="question">
+      <div class="question question5">
         ¿Por qué tengo que registrarme?
       </div>
       <div class="answercont">
@@ -289,7 +289,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="question">
+      <div class="question question6">
         ¿Puedo editar una publicación? ¿Y eliminarla?
       </div>
       <div class="answercont">
@@ -300,7 +300,7 @@
     </div>
 
     <div class="container">
-      <div class="question">
+      <div class="question question7">
         ¿Si somos una asociación o protectora, podemos publicar adopciones?
       </div>
       <div class="answercont">
@@ -313,7 +313,7 @@
     </div>
 
     <div class="container">
-      <div class="question">
+      <div class="question question8">
         Requisitos mínimos para adoptar
       </div>
       <div class="answercont">
