--- a/src/newuser.html
+++ b/src/newuser.html
@@ -18,24 +18,24 @@
   <div class="container-login">
 
     <a href="./index.html">
-      <img class="logo" src="./assets/images/version_negro_logo.svg">
+      <img class="logo" src="./assets/icons/version_negro_logo.svg">
     </a>
 
-    <div class="card-login">
+    <form class="card-login">
       <!-- <p class="p-title">Regístrate</p> -->
       <p>Nombre <span>*</span></p>
-      <input class="input-name">
+      <input class="input-name" required="required" pattern="[a-zA-ZñÑáéíóúÁÉÍÓÚ\s]{2,}" title="Debes poner más de una letra.">
       <p>Apellidos <span>*</span></p>
-      <input class="input-surname">
+      <input class="input-surname" required="required" pattern="[a-zA-ZñÑáéíóúÁÉÍÓÚ\s]{2,}" title="Debes poner más de una letra.">
 
       <div class="double-input">
         <div class="input-container">
           <p>DNI, NIE, Pasaporte <span>*</span></p>
-          <input class="input-dni">
+          <input class="input-dni" required="required" pattern="[0-9]{8}[A-Za-z]{1}]" title="Debes poner 8 números y una letra.">
         </div>
         <div class="input-container input-container-date">
           <p>Fecha de nacimiento <span>*</span></p>
-          <input class="input input-birthdate" type="date">
+          <input class="input input-birthdate" type="date" required="required">
         </div>
         <div class="input-container input-container-province">
           <p>Provincia <span>*</span></p>
@@ -43,16 +43,16 @@
         </div>
         <div class="input-container">
           <p>Localidad <span>*</span></p>
-          <input class="input input-location">
+          <input class="input input-location" required="required" pattern="[a-zA-ZñÑáéíóúÁÉÍÓÚ\s]{2,}" title="Debes poner tu localidad.">
         </div>
       </div>
 
       <p>Dirección <span>*</span></p>
-      <input class="input-direction">
+      <input class="input-direction" required="required" pattern="[a-zA-ZñÑáéíóúÁÉÍÓÚ\s]{2,}[0-9\s]{1,}" title="Debes poner tu dirección.">
       <p>Número de teléfono <span>*</span></p>
-      <input class="input-phone">
-      <div class="button btn-login-email btn-continue"><span>Continuar</span></div>
-    </div>
+      <input class="input-phone" required="required" pattern="+?{,3}[0-9]{9,}" title="Debes poner un numéro de teléfono valido.">
+      <button type="submit" class="button btn-login-email btn-continue">Continuar</button>
+    </form>
     <p>¿Ya tienes una cuenta? <a class="link-signin" href="./login.html">Inicia sesión</a></p>
   </div>
 
