form questions a medias

--- a/src/form-user.html
+++ b/src/form-user.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="./css/form-user.css">
     <link rel="icon" href="./assets/icons/Icono_logo.svg">
     <title>Kompi | Formulario</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
+    rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -23,21 +32,31 @@
                 <h2>Para ello, cuéntanos un poco más sobre ti</h2>
             </div>
             <div class="questions">
-                <p>Me gustaría adoptar a <select name="" class="question"></select>.</p>
-                <p>Me gustaría adoptar a <select name="" class="question"></select>.</p>
-                <p>Mi mascota ideal es <select name="" class="question"></select>.</p>
-                <p>Prefiero una mascota que sea <select name="" class="question"></select>.</p>
-                <p>Me gustaría que el nivel de actividad de la mascota sea <select name="" class="question"></select>.</p>
-                <p>Mi vivienda es <select name="" class="question"></select>.</p>
-                <p>Mi mascota deberá estar/tener <select name="" class="question"></select>.</p>
+                    <div class="magicbox">
+                        <p>Me gustaría adoptar a
+                        <div class="dropdown">
+                            <input type="text" class="textbox" placeholder="" readonly>
+                            <div class="question"></div>
+                        </div>
+                        </p>
+                    </div>
+
+
+                <!--<p>Me gustaría adoptar a <select name="" class="question"></select></p>
+                <p>Me gustaría adoptar a <select name="" class="question"></select></p>
+                <p>Mi mascota ideal es <select name="" class="question"></select></p>
+                <p>Prefiero una mascota que sea <select name="" class="question"></select></p>
+                <p>Me gustaría que el nivel de actividad de la mascota sea <select name="" class="question"></select></p>
+                <p>Mi vivienda es <select name="" class="question"></select></p>
+                <p>Mi mascota deberá estar/tener <select name="" class="question"></select></p>
                 <p>Estoy <select name="" class="question"></select> a adoptar a una mascota con necesidades especiales.</p>
                 <p><select name="" class="question"></select> cuidador de un animal.</p>
-                <p>Actualmente tengo <select name="" class="question"></select>.</p>
-                <p>Mi unidad familiar está compuesta por <select name="" class="question"></select>.</p>
-                <p>Mis hijos son <select name="" class="question"></select>.</p>
-                <p>En mi casa <select name="" class="question"></select> en el contrato de arrendamiento.</p>
+                <p>Actualmente tengo <select name="" class="question"></select></p>
+                <p>Mi unidad familiar está compuesta por <select name="" class="question"></select></p>
+                <p>Mis hijos son <select name="" class="question"></select></p>
+                <p>En mi casa <select name="" class="question"></select> en el contrato de arrendamiento</p>
                 <p>La mascota pasará <select name="" class="question"></select> sola en casa.</p>
-                <p>Si me voy de vacaciones <select name="" class="question"></select>.</p>
+                <p>Si me voy de vacaciones <select name="" class="question"></select></p>-->
                 <div class="rules">
                     <p>Por último y a título informativo sepa que existen una serie de normas y obligaciones legales básicas:</p>
                     <ul>
