--- a/src/404file.html
+++ b/src/404file.html
@@ -11,16 +11,9 @@
     <section>
         <div class="box">
             <div class="error">
-
-                <!--<picture class="img-pug">
-                    <source src="./assets/images/images-404/img-404-error.webp">
-                    <source src="./assets/images/images-404/img-404-error.png">
-                    <img src="./assets/images/images-404/img-404-error.png" alt="Imagen perro triste">
-                </picture>-->
-
                 <img class="img-pug" src="./assets/img-404-error.png" alt="Imagen perro triste">
-                <h2><span class="semi-bold">¡Ups!</span> Algo no ha ido como debía. La página que solicitas no existe.</h2>
-                <button><a href="./index.html">Inicio</a></button>
+                <h2><span>¡Ups!</span> Algo no ha ido como debía. La página que solicitas no existe.</h2>
+                <a href="./index.html" class="button">Inicio</a>
             </div>
 
         </div>
