--- a/src/login.html
+++ b/src/login.html
@@ -11,17 +11,17 @@
   <!--Font-Family: Open Sans and Lato -->
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@300;400;600;700&display=swap"
     rel="stylesheet">
-  <title>Log In</title>
-  <link rel="icon" href="./assets/pestaña_icono_logo.svg">
+  <title>Kompi | Iniciar sesión</title>
+  <link rel="icon" href="./assets/icons/icono_logo.svg">
 </head>
 
 <body>
-  <img class="img-dog-login" src="./assets/images/foto_perro.svg">
+  <img class="img-dog-login" src="./assets/images/foto_perro.svg" alt="Fotografía perro Pug">
 
   <div class="container-login">
 
     <a href="./index.html">
-      <img class="logo" src="./assets/icons/version_negro_logo.svg">
+      <img class="logo" src="./assets/icons/version_negro_logo.svg" alt="Logotipo Kompi"> 
     </a>
 
     <div class="card-login">
@@ -32,10 +32,8 @@
       <input class="input-password" type="password">
       <p class="forgot-pass"><a  href="./forgot-password.html">¿Has olvidado tu contraseña?</a></p>
       <div class="button btn-login-email"><span>Continuar</span></div>
-      <div class="button btn-login-google"><img class="google" src="./assets/icons/google_icono.svg"><span>Inicia sesión
-          con Google</span></div>
-      <div class="button btn-login-facebook"><img class="facebook" src="./assets/icons/icono_facebook.svg"><span>Inicia
-          sesión con Facebook</span></div>
+      <div class="button btn-login-google"><img class="google" src="./assets/icons/google_icono.svg" alt="Icono Google"><span>Inicia sesión con Google</span></div>
+      <div class="button btn-login-facebook"><img class="facebook" src="./assets/icons/facebook_icono.svg" alt="Icono Facebook"><span>Inicia sesión con Facebook</span></div>
     </div>
     <p>¿No tienes una cuenta? <a class="link-signin" href="./signin.html">Regístrate</a></p>
   </div>
