--- a/src/options-newuser.html
+++ b/src/options-newuser.html
@@ -14,17 +14,17 @@
     <div class="progress-bar"></div>
     <div class="title">
         <h1>¡Bienvenido/a a Kompi!</h1>
-        <h2>¿Qué es lo que quieres hacer?</h2>
+        <p>¿Qué es lo que quieres hacer?</p>
     </div>
     <div class="card-options">
-        <button class="adopt">
+        <a href="./form-user.html" class="adopt">
             <img src="./assets/icons/icono_logo_negro.svg" alt="Isologo">
-            <h3>ADOPTAR</h3>
-        </button>
-        <button class="give-in-adoption">
-            <img src="./assets/icons/icono_logo_negro.svg" alt="Isologo">
-            <h3>DAR EN ADOPCIÓN</h3>
-        </button>
+            <p>ADOPTAR</p>
+        </a>
+        <a href="./form-user.html" class="give-in-adoption">
+            <img src="./assets/icons/icono_logo_blanco.svg" alt="Isologo">
+            <p>DAR EN ADOPCIÓN</p>
+        </a>
     </div>
   </div>
 
