animacion display del menu, peso letra extra-card, correcion MQ burger y quetions.

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-KSG73WG');</script>
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-KSG73WG');</script>
   <!-- End Google Tag Manager -->
   <title>Kompi | Buscador de animales</title>
   <link rel="icon" href="./assets/pestaña_icono_logo.svg">
@@ -31,8 +34,8 @@
 
 <body>
   <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KSG73WG"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KSG73WG" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
   <!-- --------------------------------------NAV---------------------------------- -->
@@ -193,8 +196,9 @@
         </div>
         <img src="./assets//icono_publica.svg" alt="Publicar">
         <h3>Publica una adopción</h3>
-        <p>Crea la publicación añadiendo características e información relevante de la mascota.</p>
-        <p>¡No te olvides de las fotos!</p>
+        <p>Crea la publicación añadiendo características e información relevante de la mascota.<br> ¡No te olvides de
+          las
+          fotos!</p>
       </div>
       <div class="step">
         <div class="circle">
@@ -216,7 +220,7 @@
 
     <h2>Preguntas frecuentes</h2>
     <div class="container">
-      <div class="question question1" >
+      <div class="question question1">
         ¿Qué es Kompi?
       </div>
       <div class="answercont">
