--- a/src/form-user.html
+++ b/src/form-user.html
@@ -10,8 +10,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
-    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
@@ -39,6 +38,121 @@
                             <div class="question"></div>
                         </div>
                         </p>
+                    </div>
+
+                    <div class="magicbox">
+                        <p>Me gustaría adoptar a</p>
+                        <div class="dropdown">
+                            <input type="text" class="textbox" placeholder="" readonly>
+                            <div class="question"></div>
+                        </div>
+                    </div>
+
+                    <div class="magicbox">
+                        <p>Mi mascota ideal es</p>
+                        <div class="dropdown">
+                            <input type="text" class="textbox" placeholder="" readonly>
+                            <div class="question"></div>
+                        </div>
+                    </div>
+
+                    <div class="magicbox">
+                        <p>Prefiero una mascota que sea</p>
+                        <div class="dropdown">
+                            <input type="text" class="textbox" placeholder="" readonly>
+                            <div class="question"></div>
+                        </div>
+                    </div>
+
+                    <div class="magicbox">
+                        <p>Me gustaría que el nivel de actividad de la mascota sea</p>
+                        <div class="dropdown">
+                            <input type="text" class="textbox" placeholder="" readonly>
+                            <div class="question"></div>
+                        </div>
+                    </div>
+
+                    <div class="magicbox">
+                        <p>Mi vivienda es</p>
+                        <div class="dropdown">
+                            <input type="text" class="textbox" placeholder="" readonly>
+                            <div class="question"></div>
+                        </div>
+                    </div>
+
+                    <div class="magicbox">
+                        <p>Mi mascota deberá estar/tener</p>
+                        <div class="dropdown">
+                            <input type="text" class="textbox" placeholder="" readonly>
+                            <div class="question"></div>
+                        </div>
+                    </div>
+
+                    <div class="magicbox">
+                        <p>Estoy</p>
+                        <div class="dropdown">
+                            <input type="text" class="textbox" placeholder="" readonly>
+                            <div class="question"></div>
+                        </div>
+                        <p class="p-after">a adoptar a una mascota con necesidades especiales.</p>
+                    </div>
+
+                    <div class="magicbox">
+                        <div class="dropdown">
+                            <input type="text" class="textbox" placeholder="" readonly>
+                            <div class="question"></div>
+                        </div>
+                    <p class="p-after">cuidador de un animal.</p>
+                    </div>
+
+                    <div class="magicbox">
+                        <p>Actualmente tengo</p>
+                        <div class="dropdown">
+                            <input type="text" class="textbox" placeholder="" readonly>
+                            <div class="question"></div>
+                        </div>
+                    </div>
+
+                    <div class="magicbox">
+                        <p>Mi unidad familiar está compuesta por</p>
+                        <div class="dropdown">
+                            <input type="text" class="textbox" placeholder="" readonly>
+                            <div class="question"></div>
+                        </div>
+                    </div>
+
+                    <div class="magicbox">
+                        <p>Mis hijos son</p>
+                        <div class="dropdown">
+                            <input type="text" class="textbox" placeholder="" readonly>
+                            <div class="question"></div>
+                        </div>
+                    </div>
+
+                    <div class="magicbox">
+                        <p>En mi casa</p>
+                        <div class="dropdown">
+                            <input type="text" class="textbox" placeholder="" readonly>
+                            <div class="question"></div>
+                        </div>
+                        <p class="p-after">en el contrato de arrendamiento</p>
+                    </div>
+
+                    <div class="magicbox">
+                        <p>La mascota pasará</p>
+                        <div class="dropdown">
+                            <input type="text" class="textbox" placeholder="" readonly>
+                            <div class="question"></div>
+                        </div>
+                        <p class="p-after">sola en casa.</p>
+                    </div>
+
+                    <div class="magicbox">
+                        <p>Si me voy de vacaciones</p>
+                        <div class="dropdown">
+                            <input type="text" class="textbox" placeholder="" readonly>
+                            <div class="question"></div>
+                        </div>
                     </div>
 
 
