cambios 2 form user

--- a/src/form-user.html
+++ b/src/form-user.html
@@ -31,7 +31,7 @@
                 <h2>Para ello, cuéntanos un poco más sobre ti</h2>
             </div>
             <div class="questions">
-                    <div class="magicbox">
+                    <!--<div class="magicbox">
                         <p>Me gustaría adoptar a
                         <div class="dropdown">
                             <input type="text" class="textbox" placeholder="" readonly>
@@ -153,10 +153,10 @@
                             <input type="text" class="textbox" placeholder="" readonly>
                             <div class="question"></div>
                         </div>
-                    </div>
+                    </div>-->
 
 
-                <!--<p>Me gustaría adoptar a <select name="" class="question"></select></p>
+                <p>Me gustaría adoptar a <select name="" class="question"></select></p>
                 <p>Me gustaría adoptar a <select name="" class="question"></select></p>
                 <p>Mi mascota ideal es <select name="" class="question"></select></p>
                 <p>Prefiero una mascota que sea <select name="" class="question"></select></p>
@@ -170,7 +170,7 @@
                 <p>Mis hijos son <select name="" class="question"></select></p>
                 <p>En mi casa <select name="" class="question"></select> en el contrato de arrendamiento</p>
                 <p>La mascota pasará <select name="" class="question"></select> sola en casa.</p>
-                <p>Si me voy de vacaciones <select name="" class="question"></select></p>-->
+                <p>Si me voy de vacaciones <select name="" class="question"></select></p>
                 <div class="rules">
                     <p>Por último y a título informativo sepa que existen una serie de normas y obligaciones legales básicas:</p>
                     <ul>
