--- a/src/signin.html
+++ b/src/signin.html
@@ -30,7 +30,7 @@
       <input class="input-email" type="email" required="required">
 
       <p>Contraseña <span>*</span></p>
-      <input name="password" id="password" type="password" required="required" pattern="(?=^.{8,}$)(?=.*\d)(?=.*\W+)(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" onkeyup='check();' />
+      <input name="password" class="input-password" id="password" type="password" required="required" pattern="(?=^.{8,}$)(?=.*\d)(?=.*\W+)(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" onkeyup='check();' />
       <p>Utiliza ocho caracteres como mínimo con una mayuscula, una minúscula, un número y un caracter especial</p>
 
       <p>Verifica tu contraseña <span>*</span></p>
@@ -38,8 +38,9 @@
         onkeyup='check();'>
       <span id='message'></span>
 
-     <button type="submit" class="button btn-signin-email">Continuar</button>
+     <!--<button type="submit" class="button btn-signin-email">Continuar</button>-->
 
+      <div class="button btn-signin-email"><span>Continuar</span></div>
       <div class="button btn-signin-google"><img class="google" src="./assets/icons/google_icono.svg"><span>Regístrate
           con Google</span></div>
       <div class="button btn-signin-facebook"><img class="facebook"
