--- a/src/404file.html
+++ b/src/404file.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>File not found</title>
     <link rel="stylesheet" href="./css/404file.css">
+    <!--Font-Family: Dosis -->
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500;700;800&display=swap" rel="stylesheet">
+    <!--Font-Family: Open Sans and Lato -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <section>
