--- a/src/options-newuser.html
+++ b/src/options-newuser.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./css/options-newuser.css">
     <link rel="icon" href="./assets/icons/Icono_logo.svg">
     <title>Kompi | ¿Qué es lo que quieres hacer?</title>
+    <!--Font-Family: Dosis -->
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500;700;800&display=swap" rel="stylesheet">
+    <!--Font-Family: Open Sans and Lato -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
