cambios boton signin

--- a/src/signin.html
+++ b/src/signin.html
@@ -38,9 +38,9 @@
         onkeyup='check();'>
       <span id='message'></span>
 
-     <!--<button type="submit" class="button btn-signin-email">Continuar</button>-->
+      <button type="submit" class="button btn-signin-email">Continuar</button>
 
-      <div class="button btn-signin-email"><span>Continuar</span></div>
+      <!--<div class="button btn-signin-email"><span>Continuar</span></div>-->
       <div class="button btn-signin-google"><img class="google" src="./assets/icons/google_icono.svg"><span>Regístrate
           con Google</span></div>
       <div class="button btn-signin-facebook"><img class="facebook"
