--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QELVXML8YW"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QELVXML8YW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-QELVXML8YW');
-</script>
+    gtag('config', 'G-QELVXML8YW');
+  </script>
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
@@ -81,8 +81,18 @@
         <li><a href="./404file.html">Categorías</a></li>
         <li><a href="./404file.html">Sobre nosotros</a></li>
         <li><a href="./404file.html"><img src="./assets/icons/corazon_icono.svg" alt="favoritos"></a></li>
-        <div class="vertical-line"></div>
-        <li><a href="./login.html">Iniciar sesión</a></li>
+        <li class="vertical-line"></li>
+        <!-- <li><a href="./login.html">Iniciar sesión</a></li> -->
+        <!-- --------------------------------------When login---------------------------------- -->
+        <li class="display">
+          <img src="./assets/icons/user.svg" alt="Mi perfil">
+          <p>Perfil</p>
+          <ul class="profile">
+            <li><a href="./404file.html">Mi perfil</a></li>
+            <li><a href="./404file.html">Ajustes</a></li>
+            <li><a href="./404file.html">Cerrar sesión</a></li>
+          </ul>
+        </li>
       </ul>
     </nav>
   </header>
@@ -353,7 +363,7 @@
     <div class="information">
 
       <div class="column two">
-        <a href="./index.html"><img class="logo" src="./assets/icons/version_blanca_logo.svg"></a>
+        <a href="./index.html"><img class="logo" src="./assets/icons/version_blanca_logo.svg" alt="Kompi logo"></a>
         <a href="mailto:buscokompi@gmail.com" class="mail">buscokompi@gmail.com</a>
         <div class="social">
           <a href="https://www.facebook.com/adoptaunkompi/"><img src="./assets/icons/icono_facebook.svg"
