mejorar performance y seo

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,8 @@
   <!-- --------------------------------------NAV---------------------------------- -->
   <header>
     <nav class="topbar">
-      <a href="index.html"><img class="logo" src="./assets/icons/version_primario_logo.svg" alt="Logo"></a>
+      <a href="index.html"><img class="logo" src="./assets/icons/version_primario_logo.svg" width="112" height="34"
+          alt="Logo"></a>
       <div class="burger-img"></div>
       <div class="burger">
         <div class="opacity"></div>
@@ -63,12 +64,13 @@
           <!-- <a href="./login.html" class="m-contact">Contáctanos</a> -->
           <div class="icons">
             <a href="https://www.facebook.com/adoptaunkompi/"><img src="./assets/icons/icono_facebook_yellow.svg"
-                alt="facebook"></a>
+                width="27" height="27" alt="facebook"></a>
             <a href="https://www.instagram.com/adoptaunkompi"><img src="./assets/icons/icono_instagram_yellow.svg"
-                alt="instagram"></a>
-            <a href="https://twitter.com/adoptaunkompi"><img src="./assets/icons/icono_twitter_yellow.svg"
-                alt="twitter"></a>
-            <a href="./login.html"><img src="./assets/icons/corazon_icono.svg" alt="favoritos" class="heart"></a>
+                width="27" height="27" alt="instagram"></a>
+            <a href="https://twitter.com/adoptaunkompi"><img src="./assets/icons/icono_twitter_yellow.svg" width="27"
+                height="27" alt="twitter"></a>
+            <a href="./login.html"><img src="./assets/icons/corazon_icono.svg" width="27" height="27" alt="favoritos"
+                class="heart"></a>
           </div>
           <div class="m-footer">
             <a href="./login.html" class="button">Iniciar sesión</a>
@@ -80,12 +82,13 @@
         <li><a href="./404file.html">Adopción</a></li>
         <li><a href="./404file.html">Categorías</a></li>
         <li><a href="./404file.html">Sobre nosotros</a></li>
-        <li><a href="./404file.html"><img src="./assets/icons/corazon_icono.svg" alt="favoritos"></a></li>
+        <li><a href="./404file.html"><img src="./assets/icons/corazon_icono.svg" alt="favoritos" width="16"
+              height="15"></a></li>
         <li class="vertical-line"></li>
         <!-- <li><a href="./login.html">Iniciar sesión</a></li> -->
         <!-- --------------------------------------When login---------------------------------- -->
         <li class="display">
-          <img src="./assets/icons/user.svg" alt="Mi perfil">
+          <img src="./assets/icons/user.svg" alt="Mi perfil" width="26" height="26">
           <p>Perfil</p>
           <ul class="profile">
             <li><a href="./404file.html">Mi perfil</a></li>
@@ -101,7 +104,8 @@
   <!-- ----------------------------------HOME---------------------------------- -->
   <main class="home">
 
-    <h1>Mi raza favorita es: <br>Ad<img src="./assets/icons/icono_logo_blanco.svg" alt="logo letra 'o'">ptado</h1>
+    <h1>Mi raza favorita es: <br>Ad<img src="./assets/icons/icono_logo_blanco.svg" alt="logo letra 'o'" width="36"
+        height="49">ptado</h1>
     <p>Kompi el buscador de animales más<br> grande de la red de España</p>
     <a href="./404file.html" class="button">Comenzar búsqueda</a>
 
@@ -113,19 +117,19 @@
 
     <div class="icon">
       <div class="shadow">
-        <a href="./404file.html"> <img src="./assets/icons/icono_perro.svg" alt="perros"></a>
+        <a href="./404file.html"> <img src="./assets/icons/icono_perro.svg" alt="perros" width="51" height="52"></a>
       </div>
       <div class="shadow">
-        <a href="./404file.html"><img src="./assets/icons/icono_gato.svg" alt="gatos"></a>
+        <a href="./404file.html"><img src="./assets/icons/icono_gato.svg" alt="gatos" width="51" height="52"></a>
       </div>
       <div class="shadow">
-        <a href="./404file.html"> <img src="./assets/icons/icono_pajaro.svg" alt="pajaros"></a>
+        <a href="./404file.html"> <img src="./assets/icons/icono_pajaro.svg" alt="pajaros" width="51" height="52"></a>
       </div>
       <div class="shadow">
-        <a href="./404file.html"> <img src="./assets/icons/icono_roedor.svg" alt="roedores"></a>
+        <a href="./404file.html"> <img src="./assets/icons/icono_roedor.svg" alt="roedores" width="51" height="52"></a>
       </div>
       <div class="shadow">
-        <a href="./404file.html"><img src="./assets/icons/icono_reptil.svg" alt="reptiles"></a>
+        <a href="./404file.html"><img src="./assets/icons/icono_reptil.svg" alt="reptiles" width="51" height="52"></a>
       </div>
     </div>
 
@@ -140,27 +144,27 @@
 
     <div class="group">
       <div class="card">
-        <img src="./assets/bordercollie_smiling.jpg" alt="mascota">
+        <img src="./assets/bordercollie_smiling.jpg" alt="mascota" width="364" height="243">
         <h3 class="name">Nala</h3>
-        <p><img src="./assets/icons/icono_logo.svg" alt="">Las Pedroñeras</p>
+        <p><img src="./assets/icons/icono_logo.svg" alt="Kompi Logo" width="16" height="16">Las Pedroñeras</p>
       </div>
       <div class="card">
-        <img src="./assets/imgYorkshire.jpg" alt="mascota">
+        <img src="./assets/imgYorkshire.jpg" alt="mascota" width="364" height="243">
         <h3 class="name">Chico</h3>
-        <p><img src="./assets/icons/icono_logo.svg" alt="">Arona</p>
+        <p><img src="./assets/icons/icono_logo.svg" alt="Kompi Logo" width="16" height="16">Arona</p>
       </div>
       <div class="card">
-        <img src="./assets/imgSleapingCat.jpg" alt="mascota">
+        <img src="./assets/imgSleapingCat.jpg" alt="mascota" width="364" height="243">
         <h3 class="name">Coco</h3>
-        <p><img src="./assets/icons/icono_logo.svg" alt="">Córdoba</p>
+        <p><img src="./assets/icons/icono_logo.svg" alt="Kompi Logo" width="16" height="16">Córdoba</p>
       </div>
       <div class="card">
-        <img src="./assets/whitebrown_hamster.jpg" alt="mascota">
+        <img src="./assets/whitebrown_hamster.jpg" alt="mascota" width="364" height="243">
         <h3 class="name">Gus</h3>
-        <p><img src="./assets/icons/icono_logo.svg" alt="">Teide</p>
+        <p><img src="./assets/icons/icono_logo.svg" alt="Kompi Logo" width="16" height="16">Teide</p>
       </div>
       <div class="card-extra">
-        <img src="./assets/icons/icono_logo_blanco.svg" alt="logo Kompi">
+        <img src="./assets/icons/icono_logo_blanco.svg" alt="Kompi Logo" width="88" height="88">
         <p><span>+315 mascotas</span></p>
         <p>disponibles en kompi</p>
         <div class="footer">
@@ -204,7 +208,7 @@
         <div class="circle">
           <p>1</p>
         </div>
-        <img src="./assets/icono_notificaciones.svg" alt="Registro">
+        <img src="./assets/icono_notificaciones.svg" alt="Registro" width="144" height="144">
         <h3>Regístrate en la web</h3>
         <p>Regístrate en dos sencillos pasos.</p>
         <p>¡No te llevará más de 1 min!</p>
@@ -213,7 +217,7 @@
         <div class="circle">
           <p>2</p>
         </div>
-        <img src="./assets//icono_publica.svg" alt="Publicar">
+        <img src="./assets//icono_publica.svg" alt="Publicar" width="228" height="144">
         <h3>Publica una adopción</h3>
         <p>Crea la publicación añadiendo características e información relevante de la mascota.<br> ¡No te olvides de
           las
@@ -223,7 +227,7 @@
         <div class="circle">
           <p>3</p>
         </div>
-        <img src="./assets/icono_registra.svg" alt="Notificaciones">
+        <img src="./assets/icono_registra.svg" alt="Notificaciones" width="203" height="144">
         <h3>¡Recibe notificaciones!</h3>
         <p>Se te notificará cuando alguien esté interesado en el animal y serás tú quien cierre el acuerdo.</p>
       </div>
@@ -363,14 +367,16 @@
     <div class="information">
 
       <div class="column two">
-        <a href="./index.html"><img class="logo" src="./assets/icons/version_blanca_logo.svg" alt="Kompi logo"></a>
+        <a href="./index.html"><img class="logo" src="./assets/icons/version_blanca_logo.svg" alt="Kompi logo"
+            width="74" height="22"></a>
         <a href="mailto:buscokompi@gmail.com" class="mail">buscokompi@gmail.com</a>
         <div class="social">
-          <a href="https://www.facebook.com/adoptaunkompi/"><img src="./assets/icons/icono_facebook.svg"
-              alt="facebook"></a>
-          <a href="https://www.instagram.com/adoptaunkompi"><img src="./assets/icons/icono_instagram.svg"
-              alt="instagram"></a>
-          <a href="https://twitter.com/adoptaunkompi"><img src="./assets/icons/icono_twitter.svg" alt="twitter"></a>
+          <a href="https://www.facebook.com/adoptaunkompi/"><img src="./assets/icons/icono_facebook.svg" width="21"
+              height="21" alt="facebook"></a>
+          <a href="https://www.instagram.com/adoptaunkompi"><img src="./assets/icons/icono_instagram.svg" width="21"
+              height="21" alt="instagram"></a>
+          <a href="https://twitter.com/adoptaunkompi"><img src="./assets/icons/icono_twitter.svg" width="21" height="21"
+              alt="twitter"></a>
         </div>
       </div>
 
