crear popup eliminar animal

--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./css/index.css">
-
   <script type="module" src="./js/index.js"></script>
-
-
 </head>
 
 <body>
@@ -107,7 +104,7 @@
     <h1>Mi raza favorita es: <br>Ad<img src="./assets/icons/icono_logo_blanco.svg" alt="logo letra 'o'" width="36"
         height="49">ptado</h1>
     <p>Kompi el buscador de animales más<br> grande de la red de España</p>
-    <a href="./404file.html" class="button">Comenzar búsqueda</a>
+    <a href="./alert-message.html" class="button">Comenzar búsqueda</a>
 
   </main>
 
