html y css mejoras

--- a/src/filter-animals.html
+++ b/src/filter-animals.html
@@ -74,41 +74,44 @@
 
     <div class="filter">
 
-      <div class="choose">
-        <select name="Ubicacion" class="sel-location" data-value="Ubicacion"></select>
-        <select name="Especie" class="sel-specie"></select>
-        <select name="Race" class="sel-race"></select>
-        <select name="Sex" class="sel-sex">
-          <option value="cualquiera">Cualquiera</option>
-          <option value="macho">Macho</option>
-          <option value="hembra">Hembra</option>
-        </select>
-        <select name="select" class="sel-age">
-        </select>
-        <select name="select" class="sel-size">
-          <option value="cualquiera">Cualquiera</option>
-          <option value="pequenio">Pequeño</option>
-          <option value="mediano">Mediano</option>
-          <option value="grande">Grande</option>;
-        </select>
-        <select name="select" class="sel-color">
-        </select>
-        <select name="Vacunacion" class="sel-vaccination">
-          <option value="cualquiera">Cualquiera</option>
-          <option value="si">Si</option>
-          <option value="no">No</option>
-        </select>
-        <select name="Esterilizacion" class="sel-sterilization">
-          <option value="cualquiera">Cualquiera</option>
-          <option value="si">Si</option>
-          <option value="no">No</option>
-        </select>
-        <select name="Certificado_ppp" class="sel-certificadoppp">
-          <option value="cualquiera">Cualquiera</option>
-          <option value="si">Si</option>
-          <option value="no">No</option>
-        </select>
-      </div>
+      <p>Localidad</p>
+
+      <select name="Ubicacion" class="sel-location" data-value="Ubicacion"></select>
+      <p>Especie</p>
+      <select name="Especie" class="sel-specie"></select>
+      <p>Raza</p>
+      <select name="Race" class="sel-race"></select>
+      <p>Sexo</p>
+      <select name="Sex" class="sel-sex">
+        <option value="cualquiera">Cualquiera</option>
+        <option value="macho">Macho</option>
+        <option value="hembra">Hembra</option>
+      </select>
+      <p>Edad</p>
+      <select name="select" class="sel-age">
+      </select>
+      <p>Tamaño</p>
+      <select name="select" class="sel-size">
+        <option value="cualquiera">Cualquiera</option>
+        <option value="pequenio">Pequeño</option>
+        <option value="mediano">Mediano</option>
+        <option value="grande">Grande</option>;
+      </select>
+      <p>Color</p>
+      <select name="select" class="sel-color">
+      </select>
+      <p>Vacunas</p>
+      <select name="Vacunacion" class="sel-vaccination">
+        <option value="cualquiera">Cualquiera</option>
+        <option value="si">Si</option>
+        <option value="no">No</option>
+      </select>
+      <p>Esterilización</p>
+      <select name="Esterilizacion" class="sel-sterilization">
+        <option value="cualquiera">Cualquiera</option>
+        <option value="si">Si</option>
+        <option value="no">No</option>
+      </select>
       <button class="btn-search">Iniciar busqueda</button>
 
     </div>
