--- a/src/filter-animals.html
+++ b/src/filter-animals.html
@@ -8,39 +8,20 @@
   <link rel="stylesheet" href="./css/filter-animals.css">
 </head>
 <body>
-  <select name="Ubicacion" class="sel-location" data-value="Ubicacion"></select>
+  <select name="Ubicacion" class="sel-location"></select>
   <select name="Especie" class="sel-specie"></select>
   <select name="Race" class="sel-race"></select>
-  <select name="Sex" class="sel-sex">
-    <option value="cualquiera">Cualquiera</option>
-    <option value="macho">Macho</option>
-    <option value="hembra">Hembra</option>
-  </select>
-  <select name="select" class="sel-age">
-  </select>
-  <select name="select" class="sel-size">
-    <option value="cualquiera">Cualquiera</option>
-    <option value="pequenio">Pequeño</option>
-    <option value="mediano">Mediano</option>
-    <option value="grande">Grande</option>;
-  </select>
-  <select name="select" class="sel-color">
-  </select>
-  <select name="Vacunacion" class="sel-vaccination">
-    <option value="cualquiera">Cualquiera</option>
-    <option value="si">Si</option>
-    <option value="no">No</option>
-  </select>
+  <select name="Sex" class="sel-sex"></select>
+  <!--<select name="select" class="sel-age"></select>-->
+  <select name="select" class="sel-size"></select>
+  <!--<select name="select" class="sel-color"></select>-->
+  <select name="Vacunacion" class="sel-vaccination"></select>
   <select name="Esterilizacion" class="sel-sterilization">
     <option value="cualquiera">Cualquiera</option>
     <option value="si">Si</option>
     <option value="no">No</option>
   </select>
-  <select name="Certificado_ppp" class="sel-certificadoppp">
-    <option value="cualquiera">Cualquiera</option>
-    <option value="si">Si</option>
-    <option value="no">No</option>
-  </select>
+  <!--<select name="Certificado_ppp" class="sel-certificadoppp"></select>-->
   <button class="btn-search">Iniciar busqueda</button>
   <div class="group">
   </div>
