--- a/src/login.html
+++ b/src/login.html
@@ -35,7 +35,7 @@
       <div class="button btn-login-google"><img class="google" src="./assets/icons/google_icono.svg" alt="Icono Google"><span>Inicia sesión con Google</span></div>
       <div class="button btn-login-facebook"><img class="facebook" src="./assets/icons/facebook_icono.svg" alt="Icono Facebook"><span>Inicia sesión con Facebook</span></div>
     </div>
-    <p>¿No tienes una cuenta? <a class="link-signin" href="./signin.html">Regístrate</a></p>
+    <p class="register">¿No tienes una cuenta? <a class="link-signin" href="./signin.html">Regístrate</a></p>
   </div>
 
   <script type="module" src="./js/login.js"></script>
