filtros basicos terminados

--- a/src/filter-animals.html
+++ b/src/filter-animals.html
@@ -61,12 +61,12 @@
   <section class="searcher">
 
     <div class="results">
-      <p>519 resultados disponibles</p>
-      <select name="select" class="recent">
+      <p class="number-animals">519 resultados disponibles</p>
+      <!--<select name="select" class="recent">
         <option value="Más recientes">Más recientes</option>
         <option value="macho">Más antiguos</option>
         <option value="hembra">Aleatorio</option>
-      </select>
+      </select>-->
     </div>
 
     <div class="group">
@@ -80,26 +80,26 @@
       <p>Especie</p>
       <select name="Especie" class="sel-specie"></select>
       <p>Raza</p>
-      <select name="Race" class="sel-race"></select>
+      <select name="Raza" class="sel-race"></select>
       <p>Sexo</p>
-      <select name="Sex" class="sel-sex">
+      <select name="Sexo" class="sel-sex">
         <option value="cualquiera">Cualquiera</option>
         <option value="macho">Macho</option>
         <option value="hembra">Hembra</option>
       </select>
-      <p>Edad</p>
+      <!--<p>Edad</p>
       <select name="select" class="sel-age">
-      </select>
+      </select>-->
       <p>Tamaño</p>
-      <select name="select" class="sel-size">
+      <select name="Tamano" class="sel-size">
         <option value="cualquiera">Cualquiera</option>
         <option value="pequenio">Pequeño</option>
         <option value="mediano">Mediano</option>
         <option value="grande">Grande</option>;
       </select>
-      <p>Color</p>
+      <!--<p>Color</p>
       <select name="select" class="sel-color">
-      </select>
+      </select>-->
       <p>Vacunas</p>
       <select name="Vacunacion" class="sel-vaccination">
         <option value="cualquiera">Cualquiera</option>
