--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,6 @@
             <li><a href="./404file.html">Categorías</a></li>
             <li><a href="./404file.html">Sobre nosotros</a></li>
           </ul>
-          <!-- <a href="./login.html" class="m-contact">Contáctanos</a> -->
           <div class="icons">
             <a href="https://www.facebook.com/adoptaunkompi/"><img src="./assets/icons/icono_facebook_yellow.svg"
                 alt="facebook"></a>
@@ -82,7 +81,16 @@
         <li><a href="./404file.html">Sobre nosotros</a></li>
         <li><a href="./404file.html"><img src="./assets/icons/corazon_icono.svg" alt="favoritos"></a></li>
         <div class="vertical-line"></div>
-        <li><a href="./login.html">Iniciar sesión</a></li>
+        <li class="login"><a href="./login.html">Iniciar sesión</a></li>
+        <li class="display">
+          <img src="./assets/icons/user.svg" alt="Mi perfil" width="26" height="26">
+          <p>Perfil</p>
+          <ul class="profile">
+            <li><a href="./404file.html">Mi perfil</a></li>
+            <li><a href="./404file.html">Ajustes</a></li>
+            <li class="signout">Cerrar sesión</li>
+          </ul>
+        </li>
       </ul>
     </nav>
   </header>
@@ -130,22 +138,30 @@
 
     <div class="group">
       <div class="card">
-        <img src="./assets/bordercollie_smiling.jpg" alt="mascota">
+        <div class="img-container">
+          <img src="./assets/bordercollie_smiling.jpg" alt="mascota">
+        </div>
         <h3 class="name">Nala</h3>
         <p><img src="./assets/icons/icono_logo_negro.svg" alt="">Las Pedroñeras</p>
       </div>
       <div class="card">
-        <img src="./assets/imgYorkshire.jpg" alt="mascota">
+        <div class="img-container">
+          <img src="./assets/imgYorkshire.jpg" alt="mascota">
+        </div>
         <h3 class="name">Chico</h3>
         <p><img src="./assets/icons/icono_logo_negro.svg" alt="">Arona</p>
       </div>
       <div class="card">
-        <img src="./assets/imgSleapingCat.jpg" alt="mascota">
+        <div class="img-container">
+          <img src="./assets/imgSleapingCat.jpg" alt="mascota">
+        </div>
         <h3 class="name">Coco</h3>
         <p><img src="./assets/icons/icono_logo_negro.svg" alt="">Córdoba</p>
       </div>
       <div class="card">
-        <img src="./assets/whitebrown_hamster.jpg" alt="mascota">
+        <div class="img-container">
+          <img src="./assets/whitebrown_hamster.jpg" alt="mascota">
+        </div>
         <h3 class="name">Gus</h3>
         <p><img src="./assets/icons/icono_logo_negro.svg" alt="">Teide</p>
       </div>
@@ -154,7 +170,7 @@
         <p><span>+315 mascotas</span></p>
         <p>disponibles en kompi</p>
         <div class="footer">
-          <a class="button" href="./404file.html">Ver más</a>
+          <a class="button" href="./filter-animals.html">Ver más</a>
         </div>
       </div>
 
@@ -162,7 +178,7 @@
 
     </div>
 
-    <a class="button more" href="./404file.html">Ver más</a>
+    <a class="button more" href="./filter-animals.html">Ver más</a>
   </section>
 
 
@@ -367,7 +383,7 @@
       <div class="column">
         <p>Información</p>
         <a href="./404file.html">Sobre nosotros</a>
-        <a href="./404file.html">Busca una mascota</a>
+        <a href="./filter-animals.html">Busca una mascota</a>
         <a href="./404file.html">Contáctanos</a>
       </div>
 
