--- a/src/options-newuser.html
+++ b/src/options-newuser.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" href="./css/options-newuser.css">
     <link rel="icon" href="./assets/icons/Icono_logo.svg">
     <title>Kompi | ¿Qué es lo que quieres hacer?</title>
-    <!--Font-Family: Dosis -->
-    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500;700;800&display=swap" rel="stylesheet">
     <!--Font-Family: Open Sans and Lato -->
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -25,7 +23,7 @@
             <img src="./assets/icons/icono_logo_negro.svg" alt="Isologo">
             <p>ADOPTAR</p>
         </a>
-        <a href="./form-user.html" class="give-in-adoption">
+        <a href="./404file.html" class="give-in-adoption">
             <img src="./assets/icons/icono_logo_blanco.svg" alt="Isologo">
             <p>DAR EN ADOPCIÓN</p>
         </a>
