--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
   <link rel="stylesheet" href="./css/index.css">
 
   <script type="module" src="./js/index.js"></script>
+  <script type="module" src="./js/logout.js"></script>
 
 
 </head>
