--- a/src/login.html
+++ b/src/login.html
@@ -30,14 +30,17 @@
       <input class="input-email">
       <p>Contraseña</p>
       <input class="input-password" type="password">
-      <p class="forgot-pass"><a  href="./forgot-password.html">¿Has olvidado tu contraseña?</a></p>
+      <p class="forgot-pass"><a href="./forgot-password.html">¿Has olvidado tu contraseña?</a></p>
       <div class="button btn-login-email"><span>Continuar</span></div>
-      <div class="button btn-login-google"><img class="google" src="./assets/icons/google_icono.svg" alt="Icono Google"><span>Inicia sesión con Google</span></div>
-      <div class="button btn-login-facebook"><img class="facebook" src="./assets/icons/facebook_icono.svg" alt="Icono Facebook"><span>Inicia sesión con Facebook</span></div>
+      <div class="button btn-login-google"><img class="google" src="./assets/icons/google_icono.svg"
+          alt="Icono Google"><span>Inicia sesión con Google</span></div>
+      <div class="button btn-login-facebook"><img class="facebook" src="./assets/icons/facebook_icono.svg"
+          alt="Icono Facebook"><span>Inicia sesión con Facebook</span></div>
     </div>
     <p>¿No tienes una cuenta? <a class="link-signin" href="./signin.html">Regístrate</a></p>
   </div>
 
   <script type="module" src="./js/login.js"></script>
 </body>
+
 </html>
