--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
 
       <ul class="desktop">
         <li><a href="./404file.html">Adopción</a></li>
-        <li><a href="./404file.html">Categorías</a></li>
+        <li><a href="./filter-animals.html">Categorías</a></li>
         <li><a href="./404file.html">Sobre nosotros</a></li>
         <li><a href="./404file.html"><img src="./assets/icons/corazon_icono.svg" alt="favoritos"></a></li>
         <div class="vertical-line"></div>
@@ -105,7 +105,7 @@
     <h1>Mi raza favorita es: <br>Ad<img src="./assets/icons/icono_logo_blanco.svg" alt="logo letra 'o'" width="36"
         height="49">ptado</h1>
     <p>Kompi el buscador de animales más<br> grande de la red de España</p>
-    <a href="./404file.html" class="button">Comenzar búsqueda</a>
+    <a href="./filter-animals.html" class="button">Comenzar búsqueda</a>
 
   </main>
 
